hard-gists/1435555/run.log
=== Docker Run Log for 1435555 ===
Started at: Mi 29. Okt 12:13:52 CET 2025

[2025-10-29 12:13:53] START: Running container for 1435555
[2025-10-29 12:13:53] SUCCESS: Container 9588011a4ae5ded9443489f3e72a10e280c294f71fe7a195103b1d2e6e40a48a started for 1435555
=== Container logs for 1435555 ===
  File "/snippet.py", line 18
    print "Received %s from %r" % (first_line, address, )
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1435555 ===
[2025-10-29 12:13:55] INFO: Container 9588011a4ae5ded9443489f3e72a10e280c294f71fe7a195103b1d2e6e40a48a has stopped
